Fix #3615: add explicit `grid-gap` for repeated gids

--- a/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
+++ b/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
@@ -996,6 +996,8 @@ div.orbeon.orbeon-portlet-div {
             }
         }
 
+
+        .fr-grid-body { grid-gap: 0px }
         &.fr-norepeat {
             .fr-grid-body { grid-gap: 1px }
             &.fb-hover .fr-grid-td { box-shadow: 0 0 0 1px @grayLighter }
